docs: replace mock example with Apache Commons Lang 3.17.0 real scan results
- README — real scanId, boundary scores, FieldUtils finding, 22-finding breakdown
- ARCHITECTURE — real-world validation section with rule/file table
- llms.txt — commons-lang validation, updated project structure