@@ -32,61 +32,58 @@ public void reflect() throws Exception {
 
 Suppressed findings remain visible in the report with `status: SUPPRESSED` and are excluded from the risk score — the decision is auditable, not hidden.
 
-```
-POST /api/scan
-{
-  "repoPath": "/path/to/your/java/project",
-  "sourceVersion": "8"
-}
+### real-world example — Apache Commons Lang 3.17.0
+
+```bash
+# Clone a real Java 8 codebase — pinned tag for reproducibility
+git clone --branch LANG_3_17_0 https://github.com/apache/commons-lang.git
+
+# Scan it
+curl -X POST http://localhost:8080/api/scan \
+  -H "Content-Type: application/json" \
+  -d '{"repoPath": "/path/to/commons-lang/src/main/java", "sourceVersion": "8"}'
 ```
 
 ```json
 {
-  "scanId": "a01f058b-...",
+  "scanId": "c985dd88-6f01-43ec-a646-58676e988044",
   "detectedVersion": "Java 8",
   "targetVersion": "Java 25",
-  "riskScore": 66,
-  "riskBand": "HIGH",
-  "filesScanned": 1,
-  "filesWithFindings": 1,
+  "riskScore": 100,
+  "riskBand": "CRITICAL",
+  "filesScanned": 259,
+  "filesWithFindings": 12,
   "findings": [
     {
-      "ruleId": "JPMS_SUN_IMPORT",
+      "ruleId": "JPMS_ILLEGAL_REFLECTIVE_ACCESS",
       "severity": "BREAKING",
       "effort": "HIGH",
-      "filePath": "/path/to/LegacyCode.java",
-      "lineNumber": 1,
-      "originalCode": "import sun.misc.Unsafe;",
+      "filePath": ".../lang3/reflect/FieldUtils.java",
+      "lineNumber": 132,
+      "originalCode": "AccessibleObjects.setAccessible(method)",
       "referenceUrl": "https://openjdk.org/jeps/261",
-      "llmExplanation": "This code pattern is problematic because it uses the sun.misc package, which was not meant for public use and is not part of the JDK API. The suggested fix replaces the import with the public API equivalent, which is safer and more portable. Use --add-exports as a temporary workaround only until the code is updated.",
+      "llmExplanation": "This breaking change is necessary because of a change in the Java module system (JPMS) introduced in Java 9, which prohibits reflective access to certain JDK internals. The suggested replacement adds --add-opens as a temporary workaround until the code can be refactored to eliminate reflection on JDK internals.",
       "llmProvider": "OLLAMA",
       "llmModel": "codellama:13b",
-      "autoApplicable": false,
-      "status": "OPEN"
-    },
-    {
-      "ruleId": "DEPRECATION_FINALIZE",
-      "severity": "DEPRECATED",
-      "effort": "MEDIUM",
-      "filePath": "/path/to/LegacyCode.java",
-      "lineNumber": 13,
-      "originalCode": "protected void finalize() throws Throwable",
-      "referenceUrl": "https://openjdk.org/jeps/421",
-      "llmExplanation": "The detected code is deprecated since Java 9 because it is not guaranteed to be called by the garbage collector. The suggested fix replaces the implementation with the Cleaner API, which provides a more reliable way to perform cleanup actions when resources are no longer needed.",
-      "llmProvider": "OLLAMA",
-      "llmModel": "llama3.1:8b",
       "autoApplicable": false,
       "status": "OPEN"
     }
   ],
   "boundaryScores": [
-    { "from": "Java 8", "to": "Java 11", "score": 49, "band": "MEDIUM", "findingCount": 4 },
-    { "from": "Java 11", "to": "Java 17", "score": 5,  "band": "LOW",    "findingCount": 1 },
-    { "from": "Java 17", "to": "Java 21", "score": 12, "band": "LOW",    "findingCount": 2 },
-    { "from": "Java 21", "to": "Java 25", "score": 0,  "band": "LOW",    "findingCount": 0 }
+    { "from": "Java 8",  "to": "Java 11", "score": 100, "band": "CRITICAL", "findingCount": 14 },
+    { "from": "Java 11", "to": "Java 17", "score": 0,   "band": "LOW",      "findingCount": 0  },
+    { "from": "Java 17", "to": "Java 21", "score": 57,  "band": "HIGH",     "findingCount": 8  },
+    { "from": "Java 21", "to": "Java 25", "score": 0,   "band": "LOW",      "findingCount": 0  }
   ]
 }
 ```
+
+**22 findings across 12 files:**
+- 14 × `JPMS_ILLEGAL_REFLECTIVE_ACCESS` — `FieldUtils`, `MethodUtils`, `AccessibleObjects`, `CompareToBuilder`, `EqualsBuilder` use `setAccessible(true)` on JDK internals
+- 5 × `API_THREAD_STOP_REMOVED` — `StopWatch` uses deprecated `Thread.suspend()`
+- 3 × `CONCURRENCY_THREAD_VIRTUAL` — modernization opportunities in `BackgroundInitializer`, `TimedSemaphore`, `BasicThreadFactory`
+
+The 8→11 boundary scores **CRITICAL** — Commons Lang's reflection-heavy utility layer is exactly what JPMS was built to encapsulate. The 11→17 boundary is clean. The 17→21 boundary scores **HIGH** due to `Thread.stop()` removals.
 
 ---
 
@@ -211,9 +208,16 @@ The UI has two tabs — **scan** to run new scans, **history** to browse past sc
 ### 5. scan a project
 
 ```bash
+# Scan your own project
 curl -X POST http://localhost:8080/api/scan \
   -H "Content-Type: application/json" \
   -d '{"repoPath": "/path/to/your/java/project", "sourceVersion": "8"}'
+
+# Or try it on Apache Commons Lang — a reproducible real-world Java 8 codebase
+git clone --branch LANG_3_17_0 https://github.com/apache/commons-lang.git
+curl -X POST http://localhost:8080/api/scan \
+  -H "Content-Type: application/json" \
+  -d '{"repoPath": "/path/to/commons-lang/src/main/java", "sourceVersion": "8"}'
 ```
 
 Or use the UI — enter the repo path, select the source version, hit scan.
